Remove SQLPlugin and BlobPlugin, merge component registration
The main code base already relies a lot on components registered by
these plugins thus they aren't plugins anymore.
Due to more integration of custom logic into the main code base,
keeping depended code registered through the plugin loader doesn't
work anymore or is complex to implement.
For example, implementing new components which are relying on the
settings registered by the SQLPlugin forces these to depend on the
plugin to be loaded first.

Components registered by these pseudo plugins are moved to relevant
classes instead.